--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </tr>
         <tr>
             <td>Nam Truong</td>
-            <td>Hello, I am a student at George Mason University majoring in IT Cybersecurity.</td>
-            <td>Programming, making websites</td>
+            <td>Hello, I study at George Mason majoring in IT Cybersecurity.</td>
+            <td>Gaming, volleyball, shopping, IT</td>
         </tr>
     </table>
 </body>
