--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Nam Truong's GitHub Page</title>
 </head>
 <body>
-    <h1>Welcome to My GitHub Page!</h1>
+    <h1>My GitHub Page</h1>
     <table border="1">
         <tr>
             <th>Name</th>
