--- a/ethics.html
+++ b/ethics.html
@@ -4,16 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT Ethics</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        /* Navigation bar styling */
+        nav {
+            margin-bottom: 20px;
+        }
+
+        nav a {
+            text-decoration: none;
+            margin-right: 15px;
+            color: blue; /* Adjust to match your index.html style */
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <!-- Navigation Bar -->
     <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="ethics.html">Ethics</a></li>
-            <li><a href="about.html">About</a></li>
-        </ul>
+        <a href="index.html">Home</a>
+        <a href="ethics.html">Ethics</a>
+        <a href="about.html">About</a>
     </nav>
 
     <!-- Ethics Content -->
