--- a/ethics.html
+++ b/ethics.html
@@ -16,7 +16,7 @@
             color: blue; /* Adjust to match your index.html style */
         }
 
-        nav a:hover {
+        nav a: hover {
             text-decoration: underline;
         }
     </style>
@@ -31,7 +31,7 @@
 
     <!-- Ethics Content -->
     <h1>IT Ethics</h1>
-    <p>In the field of IT, ethics play a critical role in ensuring responsible technology use. Here are some key topics:</p>
+    <p>In IT, ethics are critical in ensuring responsible technology use. Here are some key topics:</p>
     <ul>
         <li>Privacy and data protection</li>
         <li>Guidelines for software developers</li>
@@ -39,4 +39,6 @@
     </ul>
     <p>Source: <a href="https://example.com" target="_blank">Example Reference</a></p>
 </body>
+</html>
+
 </html>
