--- a/ethics.html
+++ b/ethics.html
@@ -5,18 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT Ethics</title>
     <style>
+        /* Navigation bar styling */
         nav {
-            margin-bottom: 20px;
+            background-color: black; /* Black bar */
+            overflow: hidden;
+            padding: 10px 0; /* Adjust padding for spacing */
         }
 
         nav a {
-            text-decoration: none;
-            margin-right: 15px;
-            color: blue; /* Adjust to match your index.html style */
+            color: white; /* White text */
+            text-decoration: none; /* Remove underline */
+            padding: 14px 20px;
+            display: inline-block;
+            font-family: Arial, sans-serif;
         }
 
         nav a: hover {
-            text-decoration: underline;
+            background-color: #575757; /* Highlight on hover */
+        }
+
+        body {
+            font-family: Arial, sans-serif;
         }
     </style>
 </head>
@@ -38,6 +47,4 @@
     </ul>
     <p>Source: <a href="https://example.com" target="_blank">Example Reference</a></p>
 </body>
-</html>
-
 </html>
