--- a/about.html
+++ b/about.html
@@ -4,16 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        /* Navigation bar styling */
+        nav {
+            background-color: black; /* Black bar */
+            overflow: hidden;
+            padding: 10px 0;
+        }
+
+        nav a {
+            color: white; /* White text */
+            text-decoration: none; /* Remove underline */
+            padding: 14px 20px;
+            display: inline-block;
+            font-family: Arial, sans-serif;
+        }
+
+        nav a:hover {
+            background-color: #575757; /* Highlight on hover */
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        ul {
+            list-style-type: disc;
+            padding-left: 20px;
+        }
+
+        ul li {
+            margin: 5px 0;
+        }
+    </style>
 </head>
 <body>
     <!-- Navigation Bar -->
     <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="ethics.html">Ethics</a></li>
-            <li><a href="about.html">About</a></li>
-        </ul>
+        <a href="index.html">Home</a>
+        <a href="ethics.html">Ethics</a>
+        <a href="about.html">About</a>
     </nav>
 
     <!-- About Content -->
@@ -27,4 +64,3 @@
     </ul>
 </body>
 </html>
-
