--- a/ethics.html
+++ b/ethics.html
@@ -9,7 +9,7 @@
         nav {
             background-color: black; /* Black bar */
             overflow: hidden;
-            padding: 10px 0; /* Adjust padding for spacing */
+            padding: 10px 0;
         }
 
         nav a {
@@ -26,6 +26,22 @@
 
         body {
             font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        ul {
+            list-style-type: disc;
+            padding-left: 20px;
+        }
+
+        ul li {
+            margin: 5px 0;
         }
     </style>
 </head>
@@ -37,14 +53,13 @@
         <a href="about.html">About</a>
     </nav>
 
-    <!-- Ethics Content -->
+    <!-- About Content -->
     <h1>IT Ethics</h1>
-    <p>In IT, ethics are critical in ensuring responsible technology use. Here are some key topics:</p>
+    <p>In IT, ethics are critical in ensuring responsible technology use. Here are some key topics::</p>
     <ul>
         <li>Privacy and data protection</li>
         <li>Guidelines for software developers</li>
         <li>Ethical considerations for data scientists</li>
     </ul>
-    <p>Source: <a href="https://example.com" target="_blank">Example Reference</a></p>
 </body>
 </html>
