--- a/ethics.html
+++ b/ethics.html
@@ -71,7 +71,7 @@
         <li><strong>Bias in AI:</strong> Algorithms trained on biased data can lead to unfair outcomes. For example, job-screening AI systems have been accused of discriminating against certain demographics.</li>
         <li><strong>Transparency:</strong> Companies must ensure that AI systems are explainable and trustworthy.</li>
     </ul>
-    <p>Source: <a href="https://www.brookings.edu/research/ai-ethics/" target="_blank">Brookings Institute on AI Ethics</a></p>
+    <p>Source: <a href="https://www.brookings.edu/articles/artificial-intelligence-and-bias-four-key-challenges/" target="_blank">Artificial Intelligence and Bias: Four Key Challenges </a></p>
 
     <h2>3. Guidelines for Software Developers</h2>
     <p>Developers must follow ethical principles when creating software. Key principles include:</p>
@@ -85,7 +85,7 @@
     <h2>4. Ethical Considerations for Data Scientists</h2>
     <p>Data scientists handle vast amounts of information and must act responsibly. Ethical considerations include:</p>
     <ul>
-        <li>Preventing misuse of data to manipulate opinions, such as during elections.</li>
+        <li>Preventing data misuse to manipulate opinions, such as during elections.</li>
         <li>Ensuring data is collected with proper user consent.</li>
     </ul>
     <p>Source: <a href="https://datascience.codata.org/articles/10.5334/dsj-2019-029/" target="_blank">Ethical Practices in Data Science</a></p>
